--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':vv_trace_library', ':vv_trace_plugin'
+include ':app', ':vv_trace_library', ':vv_trace_plugin', ':vv_trave_transform'
