--- a/build.gradle
+++ b/build.gradle
@@ -8,8 +8,8 @@ buildscript {
         mavenLocal()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.0'
-        classpath 'com.vv.trace.plugin:plugin:1.0'
+        classpath 'com.android.tools.build:gradle:3.3.2'
+//        classpath 'com.vv.trace.plugin:plugin:1.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
