--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,9 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.2'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.1'
+
 //        classpath 'com.vv.trace.plugin:plugin:1.0'
 
         // NOTE: Do not place your application dependencies here; they belong
