添加luffy的字节码工具
luffy字节码工具分析

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,6 @@
+import org.objectweb.asm.AnnotationVisitor
+import org.objectweb.asm.MethodVisitor
+
 apply plugin: 'com.android.application'
 
 android {
@@ -28,4 +31,16 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation project(':vv_trace_library')
 }
-//apply plugin: 'trace-plugin'
+apply plugin: 'track-all'
+
+
+vv {
+    // 是否打印日志,可选,默认false
+    isDebug = true
+    // 是否打开SDK的日志全埋点采集,可选,默认true
+    isOpenLogTrack = true
+    // 因为默认系统包[android.support, androidx]是被过滤掉的,想对默认过滤掉的类插桩的话可以手动添加包名,但是不建议对系统类进行插桩,容易出现不可预期错误,可选,默认空
+    include = ["android.support.v7.widget"]
+    // [android.support, androidx]默认过滤，可手动追加过滤的包,可选,默认空不追加
+    exclude = []
+}
